--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ ecd/data/Contributor_I_Train.mat
 ecd/data/Contributor_I_Test.mat
 ecd/data/Contributor_II_Train.mat
 ecd/data/Contributor_II_Test.mat
+ecd/data/sample_groups.pkl
