new data --version

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-ecd/data/Contributor_I_Train.mat
-ecd/data/Contributor_I_Test.mat
-ecd/data/Contributor_II_Train.mat
-ecd/data/Contributor_II_Test.mat
+ecd/data/Contributor_I.mat
+ecd/data/Contributor_II.mat
 ecd/data/sample_groups.pkl
