commit from server

--- a/ecd/.gitignore
+++ b/ecd/.gitignore
@@ -1,4 +1,4 @@
-ecd/data/Contributor_I.mat
-ecd/data/Contributor_II.mat
+ecd/data/contributor_I.mat
+ecd/data/contributor_II.mat
 ecd/data/characters_eeg.pkl
 ecd/data/sentences_eeg.pkl
