--- a/ecd/.gitignore
+++ b/ecd/.gitignore
@@ -14,3 +14,7 @@ data/sentences_eeg_val.pkl
 .idea
 
 */__pycache__/*
+
+../readme.excalidraw
+../readme2.excalidraw
+../Meeting Summary Document.pdf
